--- a/package.json
+++ b/package.json
@@ -8,5 +8,24 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@supabase/auth-ui-react": "^0.3.5",
+    "@supabase/supabase-js": "^2.21.0",
+    "npx": "^10.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.32.3",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "detect-port": "^1.5.1",
+    "supabase": "^1.50.11",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.1"
+  }
 }
