--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@supabase/auth-ui-react": "^0.3.5",
+    "@supabase/supabase-js": "^2.21.0",
+    "npx": "^10.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.3",
